# mock-and-roll

./: .env  .env.example  .env.local.example  .gitignore  .goosehints  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini  sync_docs.py
ai_docs/: mimesis_usage_guide.md  providers_api_reference.md
config/: base.yml
config/environments/: dev.yml  prod.yml
scripts/: __init__.py  drop_schema.py  show_config.py  sync_docs.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: CLAUDE.md  __init__.py  catalog.py  cli.py  data.py  io.py  logging_config.py  spark.py  workspace.py
src/examples/: CLAUDE.md
src/examples/sales_demo/: datasets.py  main.py
src/reference_demos/sales_demo/: __init__.py  __main__.py  datasets.py  main.py
src/reference_demos/sporting_goods_retailer/: README.md  __init__.py  __main__.py  datasets.py  main.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_core_catalog_integration.py  test_core_io_integration.py  test_end_to_end_integration.py  test_simple_integration.py
tests/unit/: __init__.py  test_config_settings.py  test_core_catalog_volume.py  test_core_io.py  test_core_spark.py
